[gd_scene load_steps=6 format=3 uid="uid://dyuw5uq7ncnvo"]

[ext_resource type="Script" path="res://presets/player/player.gd" id="1_gwqw8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_813b2"]

[sub_resource type="Animation" id="Animation_yfbmp"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.100038, 0.244982, -0.0254223, 0.964018)

[sub_resource type="Animation" id="Animation_ov6uk"]
resource_name = "room_anim-start"
length = 50.0
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 3.06667, 1, -0.100038, 0.244982, -0.0254223, 0.964018, 3.76667, 1, -0.100038, 0.244982, -0.0254223, 0.964018, 9.1, 1, 0.355064, 0.0316255, 0.00326363, 0.934301, 10.0333, 1, 0.0152718, 0.718417, -0.0250279, 0.694994, 18.5667, 1, 0.0152718, 0.718417, -0.0250279, 0.694994, 19.3333, 1, -0.0865112, 0.232, 0.0213357, 0.968626, 24.0667, 1, -0.0865112, 0.232, 0.0213357, 0.968626, 24.7333, 1, 0.0152718, 0.718417, -0.0250279, 0.694994, 25.6333, 1, 0.0152718, 0.718417, -0.0250279, 0.694994, 26.4, 1, -0.0865112, 0.232, 0.0213357, 0.968626, 37.7, 1, -0.0865112, 0.232, 0.0213357, 0.968626, 38.1, 1, 0.0152718, 0.718417, -0.0250279, 0.694994, 39.0667, 1, 0.0152718, 0.718417, -0.0250279, 0.694994, 40.0333, 1, -0.0865112, 0.232, 0.0213357, 0.968626, 48.0667, 1, -0.0865112, 0.232, 0.0213357, 0.968626, 49.9333, 1, 0, 0, 0, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fa0vt"]
_data = {
"RESET": SubResource("Animation_yfbmp"),
"room_anim-start": SubResource("Animation_ov6uk")
}

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_gwqw8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_813b2")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.878676, 8.19564e-08, 0.47742, -0.0980301, 0.978692, 0.180421, -0.467248, -0.205333, 0.859952, 0, 1.75, 0)

[node name="TaroStart" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.50787, -1.29147)

[node name="RightWall–°ast" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1.09907, 0)

[node name="LeftWallCast" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 1.09907, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fa0vt")
}
autoplay = "room_anim-start"
speed_scale = 1000.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
